<resources>
    <string name="app_name">Characters List</string>

    <!-- Character Details -->
    <string name="character_status_string_format">Status: %s</string>
    <string name="character_gender_string_format">Gender: %s</string>
    <string name="character_species_string_format">Species: %s</string>
    <string name="location_string_format">Location: %s</string>
    <string name="episodes">Episodes:</string>
    <string name="retry">Retry</string>
    <string name="search_hint">Name</string>
    <string name="filter">Filter</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="search_not_result">No search results were found.</string>
    <string name="error_message">"Error querying our server, please try again later! "</string>
</resources>